配置初始配置项

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,10 +58,10 @@ server.port=8080
 # Session timeout in seconds.
 server.session.timeout= 600
 # Session tracking modes (one or more of the following: "cookie", "url", "ssl").
-server.session.tracking-modes= "url"
+#server.session.tracking-modes= "url"
 #server.ssl.ciphers= # Supported SSL ciphers.
 #server.ssl.client-auth= # Whether client authentication is wanted ("want") or needed ("need"). Requires a trust store.
-#server.ssl.enabled= #
+server.ssl.enabled=false
 #server.ssl.key-alias= #
 #server.ssl.key-password= #
 #server.ssl.key-store= #
@@ -129,7 +129,7 @@ spring.mvc.favicon.enabled=true
 # If the content of the "default" model should be ignored during redirect scenarios.
 spring.mvc.ignore-default-model-on-redirect=true
 # Locale to use.
-spring.mvc.locale= "zh_CN"
+#spring.mvc.locale= "zh_CN"
 #spring.mvc.media-types.*= # Maps file extensions to media types for content negotiation.
 #spring.mvc.message-codes-resolver-format= # Formatting strategy for message codes. For instance `PREFIX_ERROR_CODE`.
 # Path pattern used for static resources.
@@ -179,7 +179,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 #spring.thymeleaf.view-names= # Comma-separated list of view names that can be resolved.
 
 # DATA REST (RepositoryRestProperties)
-spring.data.rest.base-path= # Base path to be used by Spring Data REST to expose repository resources.
+#spring.data.rest.base-path= # Base path to be used by Spring Data REST to expose repository resources.
 #spring.data.rest.default-page-size= # Default size of pages.
 #spring.data.rest.enable-enum-translation= # Enable enum value translation via the Spring Data REST default resource bundle.
 #spring.data.rest.limit-param-name= # Name of the URL query string parameter that indicates how many results to return at once.
@@ -219,35 +219,45 @@ spring.datasource.separator=;
 #spring.datasource.test-while-idle= #
 spring.datasource.time-between-eviction-runs-millis= 1
 # Fully qualified name of the connection pool implementation to use. By default, it is auto-detected from the classpath.
-spring.datasource.type= 
+#spring.datasource.type= 
 # JDBC url of the database.
-spring.datasource.url= 
+spring.datasource.url= jdbc:mysql://localhost:3306/WechatPJ?characterEncoding=utf8&useSSL=false
 # Name of the datasource.
-spring.datasource.name=testdb
-spring.datasource.username=
+#spring.datasource.name=WechatPJ
+spring.datasource.username=root
 # Login password of the database.
-spring.datasource.password= 
+spring.datasource.password=111111
 #spring.datasource.validation-query=
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 # Enable JPA repositories.
 spring.data.jpa.repositories.enabled=true
 # Target database to operate on, auto-detected by default. Can be alternatively set using the "databasePlatform" property.
-spring.jpa.database=mysql
+spring.jpa.database=MYSQL
 # Name of the target database to operate on, auto-detected by default. Can be alternatively set using the "Database" enum.
-spring.jpa.database-platform=
+#spring.jpa.database-platform=
 # Initialize the schema on startup.
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Default to "create-drop" when using an embedded database, "none" otherwise.
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 # Naming strategy fully qualified name.
-spring.jpa.hibernate.naming-strategy=
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # Register OpenEntityManagerInViewInterceptor. Binds a JPA EntityManager to the thread for the entire processing of the request.
 spring.jpa.open-in-view=true
 # Additional native properties to set on the JPA provider.
-spring.jpa.properties.*= 
+#spring.jpa.properties.*= 
 # Enable logging of SQL statements.
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# HTTP encoding (HttpEncodingProperties) 
+# the encoding of HTTP requests/responses 
+spring.http.encoding.charset=UTF-8
+# enable http encoding support spring.http.encoding.force=true # force the configured encoding
+spring.http.encoding.enabled=true
+# force the configured encoding
+spring.http.encoding.force=true
 
 # ----------------------------------------
 # DEVTOOLS PROPERTIES
